main: update link img

--- a/sass/Components/_card.scss
+++ b/sass/Components/_card.scss
@@ -69,19 +69,19 @@
         &--1 {
             background-image:
             linear-gradient(to right, $colorSecondaryLight, $colorSecondaryDark),
-            url('../../img/involve1.jpg');
+            url('../img/involve1.jpg');
         }
         
         &--2 {
             background-image:
             linear-gradient(to right, $colorPrimaryLight, $colorPrimaryDark),
-            url('../../img/involve2.jpg');
+            url('../img/involve2.jpg');
         }
         
         &--3 {
             background-image:
             linear-gradient(to right, $colorTertiaryLight, $colorTertiaryDark),
-            url('../../img/involve3.jpg');
+            url('../img/involve3.jpg');
         }
     }
 
