--- a/sass/Components/_enroll.scss
+++ b/sass/Components/_enroll.scss
@@ -5,7 +5,7 @@
             rgba($colorWhite, .8) 0%,
             rgba($colorWhite, .8) 65%,
             transparent 35%),
-        url("../../img/background3.jpg");
+        url("../img/background3.jpg");
     }
 
     @include respond(tab-port){
@@ -13,14 +13,14 @@
         linear-gradient( to right, 
             rgba($colorWhite, .8) 0%,
             rgba($colorWhite, .8) 100%),
-        url("../../img/background3.jpg");
+        url("../img/background3.jpg");
     }
 
     background-image: 
     radial-gradient( 150% 200% ellipse at -15%,
          rgba($colorWhite, .8) 50%,
          transparent 50%),
-     url("../../img/background3.jpg");
+     url("../img/background3.jpg");
     background-size: cover;
     box-shadow: 0 1.5rem 4rem rgba($colorBlack, .2);
     border-radius: 5rem;
