--- a/css/style.css
+++ b/css/style.css
@@ -447,11 +447,11 @@ body {
     background-blend-mode: screen;
     height: 23rem; }
     .card__picture--1 {
-      background-image: linear-gradient(to right, #ffb900, #ff7730), url("../../img/involve1.jpg"); }
+      background-image: linear-gradient(to right, #ffb900, #ff7730), url("../img/involve1.jpg"); }
     .card__picture--2 {
-      background-image: linear-gradient(to right, #8e9efc, #1c3eff), url("../../img/involve2.jpg"); }
+      background-image: linear-gradient(to right, #8e9efc, #1c3eff), url("../img/involve2.jpg"); }
     .card__picture--3 {
-      background-image: linear-gradient(to right, #55c57a, #28b485), url("../../img/involve3.jpg"); }
+      background-image: linear-gradient(to right, #55c57a, #28b485), url("../img/involve3.jpg"); }
   .card__heading {
     font-size: 2.8rem;
     font-weight: 300;
@@ -579,17 +579,17 @@ body {
     object-fit: cover; }
 
 .enroll {
-  background-image: radial-gradient(150% 200% ellipse at -15%, rgba(255, 255, 255, 0.8) 50%, transparent 50%), url("../../img/background3.jpg");
+  background-image: radial-gradient(150% 200% ellipse at -15%, rgba(255, 255, 255, 0.8) 50%, transparent 50%), url("../img/background3.jpg");
   background-size: cover;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
   border-radius: 5rem;
   height: 50rem; }
   @media (max-width: 1200px) {
     .enroll {
-      background-image: radial-gradient(150% 200% ellipse at -15%, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 65%, transparent 35%), url("../../img/background3.jpg"); } }
+      background-image: radial-gradient(150% 200% ellipse at -15%, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 65%, transparent 35%), url("../img/background3.jpg"); } }
   @media (max-width: 900px) {
     .enroll {
-      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 100%), url("../../img/background3.jpg"); } }
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 100%), url("../img/background3.jpg"); } }
   .enroll__form {
     padding: 6rem; }
     @media (max-width: 1200px) {
